[gd_scene load_steps=4 format=3 uid="uid://bsmap61wt1w6t"]

[ext_resource type="Script" path="res://Scripts/place/place.gd" id="1_7e1bt"]

[sub_resource type="BoxShape3D" id="BoxShape3D_xff1o"]
size = Vector3(1, 1.703, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_74naf"]
size = Vector3(5, 3, 5)

[node name="Place" type="StaticBody3D" groups=["place"]]
script = ExtResource("1_7e1bt")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="CSGCombiner3D"]
size = Vector3(8, 0.136, 8)

[node name="CSGBox3D2" type="CSGBox3D" parent="CSGCombiner3D/CSGBox3D"]
operation = 2
size = Vector3(7.528, 0.787, 7.528)

[node name="CSGBox3D2" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.550142, 4.10045)
size = Vector3(0.537947, 1.45745, 0.499798)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.684755, 4.01273)
shape = SubResource("BoxShape3D_xff1o")

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 184.0
offset_top = 79.0
offset_right = 184.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.708373, 0.708373)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 192.0
offset_top = 143.0
offset_right = 635.0
offset_bottom = 474.0
theme_override_constants/separation = 50

[node name="Button" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "dwadawddwadwa"

[node name="Button2" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "dwadawddwadwa"

[node name="Button3" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "dwadawddwadwa"

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 4.08629)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_74naf")

[connection signal="pressed" from="Control/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
